k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lakehouse
  labels:
    app.kubernetes.io/name: lakehouse-platform
    app.kubernetes.io/part-of: lakehouse
---
apiVersion: v1
kind: Namespace
metadata:
  name: lakehouse-compute
  labels:
    app.kubernetes.io/name: lakehouse-compute
    app.kubernetes.io/part-of: lakehouse
